--- a/main.ipynb
+++ b/main.ipynb
@@ -158,6 +158,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normal color scheme"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 126,
    "metadata": {},
@@ -178,6 +185,45 @@
     "train_loader = torch.utils.data.DataLoader(train_set, batch_size=64, shuffle=True, num_workers=workers, pin_memory=True, pin_memory_device='cuda')\n",
     "val_loader = torch.utils.data.DataLoader(val_set, batch_size=64, shuffle=True, num_workers=workers, pin_memory=True, pin_memory_device='cuda')\n",
     "test_loader = torch.utils.data.DataLoader(test_set, batch_size=64, shuffle=True, num_workers=workers, pin_memory=True, pin_memory_device='cuda')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PJF color scheme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocess_pjf = preprocess"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set_pjf = torchvision.datasets.ImageFolder(root=\"dataset/train\", transform=preprocess_pjf)\n",
+    "test_set_pjf = torchvision.datasets.ImageFolder(root=\"dataset/val\", transform=preprocess_pjf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_set_pjf, val_set_pjf = torch.utils.data.random_split(train_set_pjf, [0.7, 0.3])\n",
+    "\n",
+    "train_loader_pjf = torch.utils.data.DataLoader(train_set_pjf, batch_size=64, shuffle=True, num_workers=workers, pin_memory=True, pin_memory_device='cuda')\n",
+    "val_loader_pjf = torch.utils.data.DataLoader(val_set_pjf, batch_size=64, shuffle=True, num_workers=workers, pin_memory=True, pin_memory_device='cuda')\n",
+    "test_loader_pjf = torch.utils.data.DataLoader(test_set_pjf, batch_size=64, shuffle=True, num_workers=workers, pin_memory=True, pin_memory_device='cuda')"
    ]
   },
   {
